final star wars image version

--- a/star_wars_image/Dockerfile
+++ b/star_wars_image/Dockerfile
@@ -1,6 +1,8 @@
 From    hypriot/rpi-python 
 COPY    . /src
 
+RUN apt-get update && apt-get install python-pygame
+
 EXPOSE  1234 
 EXPOSE  1235
 CMD     ["python", "-u", "/src/server.py"]
