--- a/star_wars_image/Dockerfile
+++ b/star_wars_image/Dockerfile
@@ -3,6 +3,8 @@ COPY    . /src
 
 RUN apt-get update && apt-get install -y python-pygame
 
+COPY    . /src
+
 EXPOSE  1234 
 EXPOSE  1235
 CMD     ["python", "-u", "/src/server.py"]
